[gd_scene load_steps=21 format=3 uid="uid://fic7kev01djp"]

[ext_resource type="PackedScene" uid="uid://c6ub5x3yfjwfq" path="res://mechanics/wall.tscn" id="1_40xi4"]
[ext_resource type="Script" path="res://world.gd" id="1_nfcwb"]
[ext_resource type="PackedScene" uid="uid://cxv4g3lrd0p6b" path="res://node_3d.tscn" id="5_s55pf"]
[ext_resource type="PackedScene" uid="uid://0he1lqnqyqvf" path="res://mechanics/zementmischer.tscn" id="6_nji7o"]
[ext_resource type="PackedScene" uid="uid://cc4eoydeq1jwv" path="res://UI/info hub.tscn" id="7_j1gd4"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ahgiv"]
sky_top_color = Color(0.196078, 0.356863, 1, 1)
sky_horizon_color = Color(0.635294, 0.589216, 0.778431, 1)
sky_energy_multiplier = 1.7
ground_bottom_color = Color(0.345098, 0, 0.113725, 1)
ground_horizon_color = Color(0.635294, 0.589216, 0.778431, 1)

[sub_resource type="Sky" id="Sky_16gdb"]
sky_material = SubResource("ProceduralSkyMaterial_ahgiv")

[sub_resource type="Environment" id="Environment_mksn2"]
background_mode = 2
sky = SubResource("Sky_16gdb")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mefbn"]
albedo_color = Color(0.321569, 0.32549, 0.333333, 1)
metallic = 1.0
metallic_specular = 0.56

[sub_resource type="PlaneMesh" id="PlaneMesh_lfbnf"]
size = Vector2(20, 20)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_82ptn"]
data = PackedVector3Array(10, 0, 10, -10, 0, 10, 10, 0, -10, -10, 0, 10, -10, 0, -10, 10, 0, -10)

[sub_resource type="BoxMesh" id="BoxMesh_eusfa"]
size = Vector3(0.5, 0.2, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_8ihqv"]
points = PackedVector3Array(-0.239277, -0.1, -0.471748, 0.265873, 0.114264, 0.507937, 0.247213, -0.1, 0.471748, -0.257937, 0.114264, 0.507937, 0.265873, 0.114264, -0.507937, -0.257937, 0.114264, -0.507937, 0.247213, -0.1, -0.471748, -0.239277, -0.1, 0.471748)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_moaiu"]
radius = 0.1
height = 0.5

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_klcas"]
points = PackedVector3Array(0.0953145, 0.170053, 0.0213707, -0.0965806, -0.169485, -0.0155142, -0.0886563, -0.175763, -0.0373922, -0.0819945, 0.191962, -0.0376929, -0.0300403, 0.160925, 0.0942999, 0.0583526, -0.184862, 0.0731439, 0.0429849, -0.167872, -0.0883693, 0.0139503, 0.169754, -0.0967327, -0.0737608, -0.16785, 0.064875, 0.0942999, -0.160925, -0.0300403, 0.0144295, -0.243881, -0.0312594, -0.044584, -0.160598, -0.0883929, -0.0955743, 0.153132, 0.0283568, 0.0144557, 0.244301, 0.0297245, 0.0722242, 0.167967, -0.0665078, 0.0496966, 0.158707, 0.0857742, -0.000793643, -0.178017, 0.0956131, -0.0584425, 0.158551, -0.0800677, -0.03093, -0.233687, 0.0444204, 0.0934183, -0.144947, 0.0354304, 0.0293078, 0.233417, -0.0459554, -0.0610478, 0.22599, 0.0217897, 0.059734, -0.227015, 0.0218922, -0.0235393, 0.23522, -0.0463042, -0.0953856, 0.145532, -0.029886, -0.0383032, -0.225137, -0.0533147, -0.0737611, 0.167851, 0.0648752, 0.0950523, 0.169589, -0.0228975, -0.0155137, -0.169479, -0.0965772, -0.0511934, -0.151249, 0.0856191, 0.0795333, 0.167978, 0.0576209, -0.0306837, 0.20934, 0.0739601)

[sub_resource type="CylinderMesh" id="CylinderMesh_th8la"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.5

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ersao"]
points = PackedVector3Array(0.0934183, 0.231952, 0.0354304, -0.0953856, -0.232887, -0.029886, -0.0958417, -0.23401, 0.028439, 0.0952294, -0.236411, -0.0303262, -0.029886, 0.232887, -0.0953856, -0.0868285, 0.229475, 0.0493858, 0.0354304, -0.231952, 0.0934183, 0.028439, -0.23401, -0.0958417, 0.0857116, 0.23073, -0.0512474, -0.0303262, 0.236411, 0.0952294, -0.0953856, 0.232887, -0.029886, -0.0512474, -0.23073, 0.0857116, -0.0588761, -0.232404, -0.0806639, 0.0864171, -0.232611, 0.0500716, 0.0500716, 0.232611, 0.0864171, 0.028439, 0.23401, -0.0958417, -0.0806639, 0.232404, -0.0588761, 0.0493858, -0.229475, -0.0868285, -0.0303262, -0.236411, 0.0952294, 0.0952294, 0.236411, -0.0303262, -0.029886, -0.232887, -0.0953856, -0.0958417, 0.23401, 0.028439, 0.0707, 0.228838, 0.0707, 0.0707, -0.228838, 0.0707, 0.0354304, 0.231952, 0.0934183, 0.0934183, -0.231952, 0.0354304, 0.0857116, -0.23073, -0.0512474, -0.0512474, 0.23073, 0.0857116, -0.0868285, -0.229475, 0.0493858, 0.0493858, 0.229475, -0.0868285, -0.0806639, -0.232404, -0.0588761, -0.0588761, 0.232404, -0.0806639)

[sub_resource type="Animation" id="Animation_axmk6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_23qvj"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_byatd"]
_data = {
"RESET": SubResource("Animation_axmk6"),
"fade_in": SubResource("Animation_23qvj")
}

[node name="Node3D" type="Node3D"]
script = ExtResource("1_nfcwb")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mksn2")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.111469, -0.657191, 0.745436, 0, 0.750111, 0.661312, -0.993768, 0.0737158, -0.0836141, 0, 0, 0)
light_energy = 2.4
shadow_enabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_mefbn")
transparency = 0.25
mesh = SubResource("PlaneMesh_lfbnf")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_82ptn")

[node name="Node3D" parent="." instance=ExtResource("1_40xi4")]
transform = Transform3D(-0.0718805, 0, 0.997413, 0, 1, 0, -0.997413, 0, -0.0718805, -6, 0.463181, 7)

[node name="RigidBody3D3" type="RigidBody3D" parent="." groups=["brick", "grab"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.99827, 0.149758, 7.08526)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="RigidBody3D3"]
mesh = SubResource("BoxMesh_eusfa")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D3"]
shape = SubResource("ConvexPolygonShape3D_8ihqv")

[node name="RigidBody3D4" type="RigidBody3D" parent="." groups=["brick", "grab"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.03234, 0.149758, 7.10101)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="RigidBody3D4"]
mesh = SubResource("BoxMesh_eusfa")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D4"]
shape = SubResource("ConvexPolygonShape3D_8ihqv")

[node name="RigidBody3D5" type="RigidBody3D" parent="." groups=["brick", "grab"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.1976, 0.149758, 7.21274)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="RigidBody3D5"]
mesh = SubResource("BoxMesh_eusfa")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D5"]
shape = SubResource("ConvexPolygonShape3D_8ihqv")

[node name="RigidBody3D6" type="RigidBody3D" parent="." groups=["brick", "grab"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.41884, 0.149758, 7.14382)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="RigidBody3D6"]
mesh = SubResource("BoxMesh_eusfa")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D6"]
shape = SubResource("ConvexPolygonShape3D_8ihqv")

[node name="Node3D2" parent="." instance=ExtResource("6_nji7o")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.15022, 0, 7.28005)

[node name="RigidBody3D" type="RigidBody3D" parent="." groups=["concrete", "grab"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.87297, -0.275791, 7.88816)

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.518095, 0)
mesh = SubResource("CapsuleMesh_moaiu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.518095, 0)
shape = SubResource("ConvexPolygonShape3D_klcas")

[node name="RigidBody3D2" type="RigidBody3D" parent="." groups=["grab", "water"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54059, -0.944707, 7.56939)

[node name="MeshInstance3D" type="MeshInstance3D" parent="RigidBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2595, 0)
mesh = SubResource("CylinderMesh_th8la")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2595, 0)
shape = SubResource("ConvexPolygonShape3D_ersao")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource("7_j1gd4")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_byatd")
}

[node name="ColorRect2" type="ColorRect" parent="AnimationPlayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Node3D3" parent="." instance=ExtResource("5_s55pf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.38752, 0, -1.51827)

[connection signal="closed" from="CanvasLayer/Control" to="." method="_on_control_closed"]
[connection signal="opened" from="CanvasLayer/Control" to="." method="_on_control_opened"]
